====================
     08-23-2017
====================


   * device/samsung/msm8660-common/
2cbaf12 overlay: Disable config_networkAvoidBadWifi
a306370 msm8660: enable KSM
a640ec1 Revert "msm8660: disable zRAM"

   * kernel/samsung/msm8660-common/
f26dbae1661 celox: regen defconfig
271a11bd0b2 ARM: Allow selection HZ values
364616db06e msm: kgsl: Fix direct references to HZ
c9011150eca Fix CONFIG_HZ dependency in wifi driver.
9160da0ec6b defconfig: set CONFIG_HZ to 300

   * packages/apps/CMUpdater/
dd73a20 CMUpdater: update server url for celox
429bd34 UpdateCheckService: remove appends to server URI
68d2dd0 CMUpdater: Specify request method

====================
     08-22-2017
====================


   * build/
b6b2d40bf add dirty and novo

   * build/kati/
3627a3b [C++] Ignore white space around $(call) function name

   * device/samsung/msm8660-common/
5693361 msm8660: update audio configs

   * frameworks/base/
77d547ff71c Add signature Spoofing permission
4beb8366bf4 Introduce color engine.
6abfaafc1aa TileAdapter: allow styling tile item decoration background
95923f37e31 Fix permissions for CTS [1/2]
dd1cd6adbb7 OMS: StrictMode and files under /data/system/theme/
b096c415b03 Add protected broadcast for app crash broadcast
b47bae6aa61 Themes: Allow volume slider and thumb to work with custom images.
2f67ab2b840 Separate tile label color from icon drawable color
a9d4cfc0fbc Hold "volume up" during boot to disable all overlays
d5300fe4b20 Themes: Expose Keyboard Shortcuts Dialog
e277df62166 Expose Screenshot flash and background colors
32ba5cfb131 ThemeSafety: Introduce App Crash Intent
33d532435aa Revert "Add a protected broadcast for Masquerade events"
8ccf3391b2e base: Force authorize all calling packages by Masquerade (2/3)
867bcf8b5d2 FWB: Give power dialogs own set of volume icons for themes
e6b84809b04 OMS: Add hide annotation to MODIFY_OVERLAYS permission
b1935d23783 OMS7: Rootless Security Update Preparation for March 2017