@@ -1,10 +1,10 @@
 {
  "response": [
     {
-        "datetime": 1503497046,
-        "filename": "lineage-14.1-20170823-UNOFFICIAL-celox.zip",
+        "datetime": 1503608109,
+        "filename": "lineage-14.1-20170824-UNOFFICIAL-celox.zip",
         "romtype": "nightly",
-        "url": "http://forum.xda-developers.com/devdb/project/dl/?id=26287&task=get",
+        "url": "http://forum.xda-developers.com/devdb/project/dl/?id=26305&task=get",
         "version": "14.1"
     }
   ]
